; ModuleID = '/home/carl/AnghaBench/kphp-kdb/hints/extr_hints-data.c_user_get_now_object_rating.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/hints/extr_hints-data.c_user_get_now_object_rating.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@fading = common dso_local global i64 0, align 8
@ratingT = common dso_local global i64 0, align 8
@now = common dso_local global i64 0, align 8
@RATING_NORM = common dso_local global double 0.000000e+00, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local double @user_get_now_object_rating(%struct.TYPE_4__* %0, i32 %1, i32 %2) #0 {
  %4 = alloca double, align 8
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca double, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i64 @GET_USER_RATING_STATE(i32 %11)
  %13 = icmp eq i64 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %3
  store double 0.000000e+00, double* %4, align 8
  br label %35

15:                                               ; preds = %3
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %17 = load i32, i32* %6, align 4
  %18 = load i32, i32* %7, align 4
  %19 = call double* @user_get_object_rating(%struct.TYPE_4__* %16, i32 %17, i32 %18)
  %20 = load double, double* %19, align 8
  store double %20, double* %8, align 8
  %21 = load i64, i64* @fading, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %33

23:                                               ; preds = %15
  %24 = load i64, i64* @ratingT, align 8
  %25 = load i64, i64* @now, align 8
  %26 = sub nsw i64 %24, %25
  %27 = sitofp i64 %26 to double
  %28 = load double, double* @RATING_NORM, align 8
  %29 = fdiv double %27, %28
  %30 = call double @expf(double %29)
  %31 = load double, double* %8, align 8
  %32 = fmul double %31, %30
  store double %32, double* %8, align 8
  br label %33

33:                                               ; preds = %23, %15
  %34 = load double, double* %8, align 8
  store double %34, double* %4, align 8
  br label %35

35:                                               ; preds = %33, %14
  %36 = load double, double* %4, align 8
  ret double %36
}

declare dso_local i64 @GET_USER_RATING_STATE(i32) #1

declare dso_local double* @user_get_object_rating(%struct.TYPE_4__*, i32, i32) #1

declare dso_local double @expf(double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
